# bevy-project-template-nixos-wayland

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
.cargo/: config.toml
app-bevy/: Cargo.toml
app-bevy/src/: main.rs
lib-utils/: Cargo.toml
lib-utils/src/: lib.rs
src/: main.rs
