[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

#[workspace]
resolver = "2" # wgpu/bevy need this

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking", "wayland"] }

