[package]
name = "bevy-template"
version = "0.14.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking", "wayland"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

[features]
default = ["bevy/dynamic_linking", "bevy/wayland"]
nightly = ["bevy/dynamic_linking", "bevy/wayland"] # Remove dynamic_linking when shipping!

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = "thin"
strip = "debuginfo"

[workspace]
resolver = "2" # wgpu/bevy need this

[package.metadata.rust-analyzer]
rustc_private = true

[unstable]
codegen-backend = true
